<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/calculator" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="CalcWorld | Made with ♥ by Tahir"
        android:textColor="@color/white"
        android:textColorHighlight="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edFirstValue"
        android:layout_width="353dp"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints="result"
        android:ems="10"
        android:hint="@string/firstinput"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edSecondValue"
        android:layout_width="351dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/secondInput"
        android:inputType="number"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tvAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:padding="10dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif-thin"
        android:padding="10dp"
        android:text="@string/plus"
        android:textColor="#FF004E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black" />

    <Button
        android:id="@+id/minusBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif-thin"
        android:padding="10dp"
        android:text="@string/minus"
        android:textColor="#FF004E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black" />

    <Button
        android:id="@+id/mulBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif-thin"
        android:padding="10dp"
        android:text="@string/multiply"
        android:textColor="#FF004E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black" />

    <Button
        android:id="@+id/divBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif-thin"
        android:padding="10dp"
        android:text="@string/divide"
        android:textColor="#FF004E"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="Clear"
        android:textColor="#FF004E"
        android:textSize="24sp"
        app:backgroundTint="@color/black" />

</LinearLayout>
